flat update and fix some bugs
